# tegra_swizzle

./: Cargo.toml  README.md  nutexb_block_heights.csv  release.toml  swizzle.md  tiling.md
benches/: blockheight.rs
block_linear_output/: lut_block16_1024x1024.csv  lut_block16_12x12.csv  lut_block16_320x320.csv  lut_block16_512x512.csv  lut_block16_768x768.csv  lut_block4_320x320.csv  lut_block4_512x512.csv
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deswizzle.rs  deswizzle_surface.rs  swizzle_deswizzle.rs  swizzle_surface.rs
nutexb_swizzle/: Cargo.toml  README.md  release.toml
nutexb_swizzle/fuzz/: Cargo.toml
nutexb_swizzle/fuzz/fuzz_targets/: deswizzle.rs  deswizzle_valid_input.rs  swizzle_deswizzle.rs
nutexb_swizzle/src/: formats.rs  lib.rs  main.rs  nutexb.rs  swizzle.rs
nutexb_swizzle_cli/: Cargo.toml
nutexb_swizzle_cli/src/: formats.rs  lib.rs  main.rs  nutexb.rs
src/: arrays.rs  blockdepth.rs  blockheight.rs  ffi.rs  lib.rs  main.rs  surface.rs  swizzle.rs
swizzle_output/: lut_block16_24x24.csv  lut_block16_48x48.csv  lut_block16_64x64.csv  patterns_block16_1024x1024.txt  patterns_block16_3072x3072.txt  patterns_block16_4096x4096.txt  patterns_block16_512x512.txt  patterns_block4_256x256.txt  patterns_block4_512x512.txt
tegra_swizzle/: Cargo.toml  README.md
tegra_swizzle/benches/: deswizzle_surface.rs  my_benchmark.rs  swizzle.rs
tegra_swizzle/fuzz/: Cargo.toml
tegra_swizzle/fuzz/fuzz_targets/: deswizzle.rs  deswizzle_surface.rs  swizzle_deswizzle.rs
tegra_swizzle/src/: arrays.rs  blockdepth.rs  blockheight.rs  ffi.rs  imagedata.rs  lib.rs  surface.rs  swizzle.rs
