[package]
name = "nutexb_swizzle"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
binread = "2.1.1"
clap = "2.33.3"
binwrite = "0.2.1"
ddsfile = "0.4.0"
rayon = "1.5"