[package]
name = "tegra_swizzle"
version = "0.3.2"
authors = ["ScanMountGoat <>"]
description = "Tegra X1 block linear texture memory tiling"
license = "MIT"
documentation = "https://docs.rs/tegra_swizzle"
repository = "https://github.com/ScanMountGoat/tegra_swizzle"
edition = "2018"

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3"

[features]
default = ["std"]
std = []
ffi = []

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "blockheight"
harness = false

[[bench]]
name = "swizzle"
harness = false

[[bench]]
name = "deswizzle_surface"
harness = false
