[package]
name = "nutexb_swizzle_cli"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tegra_swizzle = { path = "../tegra_swizzle" }
binread = "2.1.1"
binwrite = "0.2.1"
ddsfile = "0.4.0"
rayon = "1.5"
ahash = "0.7.4"
csv = "1.1.6"