[package]
name = "tegra_swizzle"
version = "0.2.0"
authors = ["ScanMountGoat <>"]
description = "Unofficial CPU implementation for Tegra X1 swizzling"
license = "MIT"
documentation = "https://docs.rs/tegra_swizzle"
repository = "https://github.com/ScanMountGoat/tegra_swizzle"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3"

[features]
ffi = []

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "blockheight"
harness = false

[[bench]]
name = "swizzle"
harness = false

[[bench]]
name = "deswizzle_surface"
harness = false
